[package]
name = "volt_parse"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The advanced, lightning-fast parsing library"
keywords = ["volt_parse", "volt", "parse", "parsing", "text"]
homepage = "https://github.com/SirHall/volt_parse"
repository = "https://github.com/SirHall/volt_parse"
documentation = "https://github.com/SirHall/volt_parse"
readme = "README.md"

[dependencies]
