[package]
name = "volt_parse"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The advanced, slightly different take on the parser combinator concept"
keywords = ["volt_parse", "volt", "parse", "parsing", "text"]
homepage = "https://github.com/SirHall/volt_parse"
repository = "https://github.com/SirHall/volt_parse"
documentation = "https://github.com/SirHall/volt_parse"
readme = "README.md"

[dependencies]

[dev-dependencies]
anyhow = "1.0.57"
itertools = "0.10.3"